Switch from spring-doc-resources to spring-asciidoctor-backends.